[package]
name = "po_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
chrono = { version = "0.4.40", features = ["serde"] }
http-body-util = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["timeout"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
